# src/routes/auth.route.ts
@@ -1,7 +1,14 @@
 import express from 'express';
-import { getAllUser, login, signUp, refreshToken, verifyEmailAccount } from '../controllers/auth.controller';
+import {
+  getAllUser,
+  login,
+  signUp,
+  refreshToken,
+  verifyEmailAccount,
+  resetPassword,
+} from '../controllers/auth.controller';
 import { verifyToken } from '../services/token.service';
-// import { authenticateToken } from '../controllers/authController';
+
 const authRoute = express.Router();
 
 authRoute.get('/list', verifyToken, getAllUser);
@@ -13,5 +20,7 @@ authRoute.post('/login', login);
 authRoute.post('/refresh-tokens', refreshToken);
 
 authRoute.post('/verify-email', verifyEmailAccount);
+
+authRoute.post('/reset-password', resetPassword);
 
 export { authRoute };
